@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2003, 2016, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2003, 2019, Oracle and/or its affiliates. All rights reserved.
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 #
 # This code is free software; you can redistribute it and/or modify it
@@ -53,8 +53,5 @@ runOne Pending
 
 # Test Pending with parallel scavenger collector
 runOne -XX:+UseParallelGC Pending 
-
-# Test Pending with concurrent collector
-runOne -XX:+UseConcMarkSweepGC Pending
 
 exit 0
